--- a/app/templates/greeting_cards.html
+++ b/app/templates/greeting_cards.html
@@ -17,7 +17,7 @@
         </div>
         <input type="button" id="start-carousel" value="Старт">
     {% else %}
-        <li>Нет открыток</li>
+        <div>Нет открыток</div>
     {% endif %}
     <script src="{{ url_for('static', filename='js/carousel.js') }}"></script>
 {% endblock %}
